--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body class="body">
         <header class="header">
-            <img class="header-img" src="./eisenhower-matrix.jpg">
+            <img class="header-img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
             <a class="header-link"
                href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
         </header>
@@ -34,7 +34,7 @@
                         <label class="task">Pay Bills</label>
                         <input type="text" class="task task-name">
                         <button class="btn edit-btn">Edit</button>
-                        <button class="btn delete-btn"><img src="./remove.svg"></button>
+                        <button class="btn delete-btn"><img src="./remove.svg" alt="remove"></button>
                     </li>
                     <li class="edit-mode tasks-list-item">
                         <input type="checkbox">
@@ -43,7 +43,7 @@
                                value="Go Shopping"
                                class="task task-name">
                         <button class="btn edit-btn">Save</button>
-                        <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg"></button>
+                        <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg" alt="remove"></button>
                     </li>
                 </ul>
             </section>
@@ -55,7 +55,7 @@
                         <label class="task">See the Doctor</label>
                         <input type="text" class="task task-name">
                         <button class="btn edit-btn">Edit</button>
-                        <button class="btn delete-btn"><img src="./remove.svg"></button>
+                        <button class="btn delete-btn"><img src="./remove.svg" alt="remove"></button>
                     </li>
                 </ul>
             </section>
