--- a/index.html
+++ b/index.html
@@ -3,36 +3,41 @@
   <head>
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
-              rel="stylesheet"
-              type="text/css">
+          rel="stylesheet"
+          type="text/css">
     <link rel="stylesheet"
-              href="style.css"
-              media="screen"
-              charset="utf-8">
+          href="style.css"
+          media="screen"
+          charset="utf-8">
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
+      <img class="header-img"
+           src="./eisenhower-matrix.jpg"
+           alt="eisenhower-matrix">
       <a class="header-link"
-               href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
       <section id="add-task">
         <h3 class="section-title">Add Item</h3>
           <div class="add-task-wrapper">
             <input id="new-task"
-                           class="task"
-                           type="text">
+                   class="task"
+                   type="text">
             <button class="btn task-btn">Add</button>
           </div>
       </section>
       <section class="incomplete-tasks">
         <h3 class="section-title">Todo</h3>
-        <ul id="incomplete-tasks" class="tasks-list">
+        <ul id="incomplete-tasks"
+            class="tasks-list">
           <li class="tasks-list-item">
-            <input type="checkbox" class="checkbox">
+            <input type="checkbox"
+                   class="checkbox">
             <label class="task">Pay Bills</label>
-            <input type="text" class="task task-name">
+            <input type="text"
+                   class="task task-name">
             <button class="btn edit-btn">Edit</button>
             <button class="btn delete-btn"><img src="./remove.svg" alt="remove"></button>
           </li>
@@ -40,8 +45,8 @@
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text"
-                               value="Go Shopping"
-                               class="task task-name">
+                   value="Go Shopping"
+                   class="task task-name">
             <button class="btn edit-btn">Save</button>
             <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg" alt="remove"></button>
           </li>
@@ -49,11 +54,13 @@
       </section>
       <section class="completed-tasks">
         <h3 class="section-title">Completed</h3>
-        <ul id="completed-tasks" class="tasks-list">
+        <ul id="completed-tasks"
+            class="tasks-list">
           <li class="tasks-list-item">
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
-            <input type="text" class="task task-name">
+            <input type="text"
+                   class="task task-name">
             <button class="btn edit-btn">Edit</button>
             <button class="btn delete-btn"><img src="./remove.svg" alt="remove"></button>
           </li>
