--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <input type="text"
                    class="task task-name">
             <button class="btn edit-btn">Edit</button>
-            <button class="btn delete-btn"><img src="./remove.svg" alt="remove"></button>
+            <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg" alt="remove"></button>
           </li>
           <li class="edit-mode tasks-list-item">
             <input type="checkbox">
@@ -62,7 +62,7 @@
             <input type="text"
                    class="task task-name">
             <button class="btn edit-btn">Edit</button>
-            <button class="btn delete-btn"><img src="./remove.svg" alt="remove"></button>
+            <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg" alt="remove"></button>
           </li>
         </ul>
       </section>
