--- a/index.html
+++ b/index.html
@@ -12,57 +12,57 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-img"
+      <img class="header__img"
            src="./eisenhower-matrix.jpg"
            alt="eisenhower-matrix">
-      <a class="header-link"
+      <a class="header__link"
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <section id="add-task">
-        <h3 class="section-title">Add Item</h3>
-          <div class="add-task-wrapper">
-            <input id="new-task"
+      <section id="add__task">
+        <h3 class="section__title">Add Item</h3>
+          <div class="add__task_wrapper">
+            <input id="new__task"
                    class="task"
                    type="text">
-            <button class="btn task-btn">Add</button>
+            <button class="btn task__btn">Add</button>
           </div>
       </section>
-      <section class="incomplete-tasks">
-        <h3 class="section-title">Todo</h3>
-        <ul id="incomplete-tasks"
-            class="tasks-list">
-          <li class="tasks-list-item">
+      <section class="incomplete__tasks">
+        <h3 class="section__title">Todo</h3>
+        <ul id="incomplete__tasks"
+            class="tasks__list">
+          <li class="tasks__list_item">
             <input type="checkbox"
                    class="checkbox">
             <label class="task">Pay Bills</label>
             <input type="text"
-                   class="task task-name">
-            <button class="btn edit-btn">Edit</button>
-            <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg" alt="remove"></button>
+                   class="task task__name">
+            <button class="btn edit__btn">Edit</button>
+            <button class="btn delete__btn"><img class="delete__btn_img" src="./remove.svg" alt="remove"></button>
           </li>
-          <li class="edit-mode tasks-list-item">
+          <li class="edit-mode tasks__list_item">
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text"
                    value="Go Shopping"
-                   class="task task-name">
-            <button class="btn edit-btn">Save</button>
-            <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg" alt="remove"></button>
+                   class="task task__name">
+            <button class="btn edit__btn">Save</button>
+            <button class="btn delete__btn"><img class="delete__btn_img" src="./remove.svg" alt="remove"></button>
           </li>
         </ul>
       </section>
-      <section class="completed-tasks">
-        <h3 class="section-title">Completed</h3>
-        <ul id="completed-tasks"
-            class="tasks-list">
-          <li class="tasks-list-item">
+      <section class="completed__tasks">
+        <h3 class="section__title">Completed</h3>
+        <ul id="completed__tasks"
+            class="tasks__list">
+          <li class="tasks__list_item">
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
             <input type="text"
-                   class="task task-name">
-            <button class="btn edit-btn">Edit</button>
-            <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg" alt="remove"></button>
+                   class="task task__name">
+            <button class="btn edit__btn">Edit</button>
+            <button class="btn delete__btn"><img class="delete__btn_img" src="./remove.svg" alt="remove"></button>
           </li>
         </ul>
       </section>
