refactor: usinng tag selectors only for reset style, laconic name of selector (rules 3.3, 3.4)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <button class="btn delete__btn"><img class="delete__btn_img" src="./remove.svg" alt="remove"></button>
           </li>
           <li class="edit-mode tasks__list_item">
-            <input type="checkbox">
+            <input type="checkbox"
+                   class="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text"
                    value="Go Shopping"
@@ -59,7 +60,9 @@
         <ul id="completed__tasks"
             class="tasks__list">
           <li class="tasks__list_item">
-            <input type="checkbox" checked>
+            <input type="checkbox"
+                   class="checkbox"
+                   checked>
             <label class="task">See the Doctor</label>
             <input type="text"
                    class="task task__name">
