--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
-          rel="stylesheet"
-          type="text/css">
+          rel="stylesheet">
     <link rel="stylesheet"
           href="style.css"
           media="screen">
@@ -25,9 +24,9 @@
         <h3 class="section__title">Add Item</h3>
           <div class="add__task_wrapper">
             <input id="new__task"
-                   class="task"
+                   class="task task__name"
                    type="text">
-            <button class="btn task__btn">Add</button>
+            <button class="task__btn">Add</button>
           </div>
       </section>
       <section class="incomplete__tasks">
@@ -36,22 +35,22 @@
             class="tasks__list">
           <li class="tasks__list_item">
             <input type="checkbox"
-                   class="checkbox">
+                   class="task__checkbox">
             <label class="task">Pay Bills</label>
             <input type="text"
                    class="task task__name">
-            <button class="btn edit__btn">Edit</button>
-            <button class="btn delete__btn"><img class="delete__btn_img" src="./remove.svg" alt="remove"></button>
+            <button class="task__btn">Edit</button>
+            <button class="delete__btn"><img class="delete__btn_img" src="./remove.svg" alt="remove"></button>
           </li>
-          <li class="edit-mode tasks__list_item">
+          <li class="tasks__list_item edit-mode">
             <input type="checkbox"
-                   class="checkbox">
+                   class="task__checkbox">
             <label class="task">Go Shopping</label>
             <input type="text"
                    value="Go Shopping"
                    class="task task__name">
-            <button class="btn edit__btn">Save</button>
-            <button class="btn delete__btn"><img class="delete__btn_img" src="./remove.svg" alt="remove"></button>
+            <button class="task__btn">Save</button>
+            <button class="delete__btn"><img class="delete__btn_img" src="./remove.svg" alt="remove"></button>
           </li>
         </ul>
       </section>
@@ -61,13 +60,13 @@
             class="tasks__list">
           <li class="tasks__list_item">
             <input type="checkbox"
-                   class="checkbox"
+                   class="task__checkbox"
                    checked>
             <label class="task">See the Doctor</label>
             <input type="text"
                    class="task task__name">
-            <button class="btn edit__btn">Edit</button>
-            <button class="btn delete__btn"><img class="delete__btn_img" src="./remove.svg" alt="remove"></button>
+            <button class="task__btn">Edit</button>
+            <button class="delete__btn"><img class="delete__btn_img" src="./remove.svg" alt="remove"></button>
           </li>
         </ul>
       </section>
